[package]
name = "anonymous-poll"
version = "0.0.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1"
console_error_panic_hook = { version = "0.1", optional = true }
ed25519-dalek = "1.0"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
twilight-model = "0.13"
wasm-bindgen = { version = "0.2.82", features = ["serde-serialize"] }
worker = "0.0"

[profile.release]
opt-level = "s"
